--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     <div class="container">
         <header>
             <h1>Unreal Log Parser - Local Edition</h1>
-            <p class="subtitle">Parse information used to triage issues from Unreal log files</p>
+            <p class="subtitle">Parse information used to triage issues from Unreal log files, local browser parsing, no server upload required</p>
         </header>
         
         <div class="content">
