Add Github source link

--- a/index.html
+++ b/index.html
@@ -616,6 +616,7 @@
 
     <footer>
         <p>Unreal Log Parser - Local Edition &copy; 2025 - Local browser parsing, no server upload required</p>
+        <p><a href="https://github.com/sunzhuoshi/UnrealLogParser" target="_blank" style="color: #fdbb2d; text-decoration: underline;">Source on GitHub</a></p>
     </footer>
 
     <script>
