Support small mobile

--- a/index.html
+++ b/index.html
@@ -447,6 +447,68 @@
                 padding: 10px 12px;
             }
         }
+
+        @media (max-width: 400px) {
+            body {
+                padding: 5px;
+            }
+            .container {
+                max-width: 100vw;
+                border-radius: 8px;
+                margin: 5px 0;
+                padding: 0;
+            }
+            header {
+                padding: 10px 2px;
+            }
+            h1 {
+                font-size: 1.05rem;
+            }
+            .subtitle {
+                font-size: 0.85rem;
+            }
+            .content {
+                padding: 2px;
+            }
+            .upload-section, .result-section {
+                padding: 2px;
+            }
+            .basic-info-item, .system-info-item, .rhi-info-item, .xess-plugin-item {
+                min-width: 0;
+                padding: 6px 4px;
+                font-size: 0.85rem;
+            }
+            .info-title {
+                font-size: 0.75rem;
+            }
+            .info-value {
+                font-size: 0.85rem;
+            }
+            .section-title {
+                font-size: 0.95rem;
+                padding-bottom: 4px;
+            }
+            .filter-row {
+                gap: 4px;
+            }
+            .filter-input {
+                min-width: 60px;
+                font-size: 0.8rem;
+                padding: 6px 8px;
+            }
+            .btn, .btn-filter, .btn-cancel {
+                font-size: 0.85rem;
+                padding: 7px 8px;
+            }
+            .file-content-container {
+                max-height: 80px;
+                font-size: 0.7rem;
+            }
+            footer {
+                padding: 8px 2px;
+                font-size: 0.7rem;
+            }
+        }
     </style>
 </head>
 <body>
