Fix display issue after loading on mobile

--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
 
         .upload-section {
             flex: 1;
+            max-width: 100%;
             min-width: 300px;
             padding: 20px;
         }
 
         .result-section {
             flex: 3;
+            max-width: 100%;
             min-width: 300px;
             padding: 20px;
             border-left: 1px solid #eee;
