Update default plugin info text to 'Not parsed'
Changed the default display text for plugin and SDK version fields from 'Not found' to 'Not parsed' in the plugin info section for improved clarity.

--- a/index.html
+++ b/index.html
@@ -620,19 +620,19 @@
                     <div class="xess-plugin-info">
                         <div class="xess-plugin-item">
                             <div class="info-title">Plugin Version Name:</div>
-                            <div class="info-value" id="xessPluginVersionName">Not found</div>
+                            <div class="info-value" id="xessPluginVersionName">Not parsed</div>
                         </div>
                         <div class="xess-plugin-item">
                             <div class="info-title">XeSS SDK Version:</div>
-                            <div class="info-value" id="xessSDKVersion">Not found</div>
+                            <div class="info-value" id="xessSDKVersion">Not parsed</div>
                         </div>
                         <div class="xess-plugin-item">
                             <div class="info-title">XeLL SDK Version:</div>
-                            <div class="info-value" id="xellSDKVersion">Not found</div>
+                            <div class="info-value" id="xellSDKVersion">Not parsed</div>
                         </div>
                         <div class="xess-plugin-item">
                             <div class="info-title">XeFG SDK Version:</div>
-                            <div class="info-value" id="xefgSDKVersion">Not found</div>
+                            <div class="info-value" id="xefgSDKVersion">Not parsed</div>
                         </div>
                     </div>
 
