--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
     <div class="container">
         <header>
             <h1>Unreal Log Parser - Local Edition</h1>
-            <p class="subtitle">Parse information used to triage issues from Unreal log files, local browser parsing, no server upload required</p>
+            <p class="subtitle">Local browser parsing · Instant triage · No server uploads</p>
         </header>
 
         <div class="content">
@@ -679,7 +679,7 @@
     </div>
 
     <footer>
-        <p>Unreal Log Parser - Local Edition &copy; 2025 - Local browser parsing, no server upload required</p>
+        <p>Unreal Log Parser - Local Edition &copy; 2025 - Local browser parsing · Instant triage · No server uploads</p>
         <p><a href="https://github.com/sunzhuoshi/UnrealLogParser" target="_blank" style="color: #fdbb2d; text-decoration: underline;">Source on GitHub</a></p>
     </footer>
 
